이제 ui1으로 넘어감 해결: so파일을 jniLibs폴더에 넣고 main에 추가해야 함.

--- a/app/src/main/res/layout/ui_1.xml
+++ b/app/src/main/res/layout/ui_1.xml
@@ -32,12 +32,11 @@
         android:id="@+id/bt_button"
         android:layout_width="169dp"
         android:layout_height="85dp"
-        android:layout_marginTop="80dp"
         android:text="Bluetooth Connect"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connect_title" />
+        tools:layout_editor_absoluteY="200dp" />
 
     <Button
         android:id="@+id/headset_button"
