--- a/app/src/main/res/layout/ui_1.xml
+++ b/app/src/main/res/layout/ui_1.xml
@@ -21,10 +21,11 @@
         android:id="@+id/connect_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="68dp"
         android:text="CONNECT"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,16 +37,15 @@
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="200dp" />
+        app:layout_constraintTop_toBottomOf="@+id/headset_button" />
 
     <Button
         android:id="@+id/headset_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="headset button"
-        app:layout_constraintBottom_toTopOf="@+id/bt_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/connect_title" />
 
